# aws-lambda-cpp-python

./: .gitignore  CMakeLists.txt  README.md  lambda_function.py  test.yml
include/: main.h  s3.h
src/: CMakeLists.txt  main.cpp  s3.cpp
test/: CMakeLists.txt  test-file-io.cpp  test-main.cpp
